fix font loading warning visible in console
see https://stackoverflow.com/a/65127949/4014509

--- a/src/main/resources/css/dark_theme.css
+++ b/src/main/resources/css/dark_theme.css
@@ -5,15 +5,15 @@
  ******************************************************************************/
 
 @font-face {
-	src: url('opensans-regular.ttf');
+	src: url('opensans_regular.ttf');
 }
 
 @font-face {
-	src: url('opensans-semibold.ttf');
+	src: url('opensans_semibold.ttf');
 }
 
 @font-face {
-	src: url('opensans-bold.ttf');
+	src: url('opensans_bold.ttf');
 }
 
 /*******************************************************************************
